--- a/chatbot_v1/chatbot.ipynb
+++ b/chatbot_v1/chatbot.ipynb
@@ -57,7 +57,7 @@
     "import openai\n",
     "import gradio as gr\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"",
     "\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\":\n",
